Added the lstm train model

--- a/text_project_modified.ipynb
+++ b/text_project_modified.ipynb
@@ -40,8 +40,15 @@
     "from os.path import split\n",
     "\n",
     "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.nn.functional as F\n",
     "import torchvision\n",
     "from torchvision.datasets.utils import download_url\n",
+    "\n",
+    "from nltk.stem import WordNetLemmatizer\n",
+    "from nltk.corpus import stopwords\n",
+    "from torch.utils.data import Dataset, DataLoader\n",
+    "from sklearn.model_selection  import train_test_split\n",
     "import zipfile\n",
     "\n",
     "root_dir = os.getcwd()\n",
@@ -392,6 +399,19 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lemmatizer = WordNetLemmatizer() \n",
+    "\n",
+    "def lemmatize(words):\n",
+    "    lemmatized_text = [lemmatizer.lemmatize(t, pos='n') for t in words] # lemmatized nouns\n",
+    "    return ''.join(lemmatized_text)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
    "outputs": [],
@@ -399,6 +419,7 @@
     "def implement_clean_text(df):\n",
     "    df['clean_text'] = df['text'].apply(lambda x: clean_text(x))\n",
     "    df['clean_text'] = df['clean_text'].apply(lambda x: remove_stopwords(x))\n",
+    "    df['clean_text'] = df['clean_text'].apply(lambda x: lemmatize(x))\n",
     "    return df"
    ]
   },
@@ -438,7 +459,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def create_encoder(data, input_column=\"clean_text\", output_column=\"codes\", X_encoder_filename = 'X_encoder.pickle', Y_encoder_filename='Y_encoder_pickle'):\n",
+    "def create_encoder(data, input_column=\"clean_text\", output_column=\"codes\", X_encoder_filename = 'X_encoder.pickle', Y_encoder_filename='Y_encoder.pickle'):\n",
     "    \n",
     "    encoder = StaticTokenizerEncoder(data[input_column])\n",
     "    \n",
@@ -462,11 +483,11 @@
     "def tokenize_data(data,X_encoder, Y_encoder,input_column=\"clean_text\", output_column=\"codes\"):\n",
     "    x_raw = [X_encoder.encode(x) for x in df[input_column]]\n",
     "    max_len = max([len(x) for x in x_raw])\n",
-    "    x_raw = [pad_tensor(x, length=4395) for x in x_raw]\n",
+    "    x_raw = [np.array([pad_tensor(x, length=max_len).numpy()]) for x in x_raw]\n",
     "    \n",
     "    y_raw = Y_encoder.transform(data[output_column])\n",
     "    \n",
-    "    return x_raw, torch.from_numpy(y_raw)"
+    "    return x_raw, np.array(y_raw)"
    ]
   },
   {
@@ -475,7 +496,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def load_encoder(X_encoder_filename = 'X_encoder.pickle', Y_encoder_filename='Y_encoder_pickle'):\n",
+    "def load_encoder(X_encoder_filename = 'X_encoder.pickle', Y_encoder_filename='Y_encoder.pickle'):\n",
     "    with open (X_encoder_filename, 'rb') as handle:\n",
     "        X_encoder = pickle.load(handle)\n",
     "    \n",
@@ -509,24 +530,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AssertionError",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-20-9ba51367a555>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mx_input\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_input\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtokenize_data\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mx_encoder\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_encoder\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m<ipython-input-16-a23223b45038>\u001b[0m in \u001b[0;36mtokenize_data\u001b[1;34m(data, X_encoder, Y_encoder, input_column, output_column)\u001b[0m\n\u001b[0;32m      2\u001b[0m     \u001b[0mx_raw\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0mX_encoder\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mencode\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mdf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0minput_column\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m     \u001b[0mmax_len\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmax\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mx_raw\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m     \u001b[0mx_raw\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0mpad_tensor\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlength\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m4395\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mx_raw\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m     \u001b[0my_raw\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mY_encoder\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtransform\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0moutput_column\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-16-a23223b45038>\u001b[0m in \u001b[0;36m<listcomp>\u001b[1;34m(.0)\u001b[0m\n\u001b[0;32m      2\u001b[0m     \u001b[0mx_raw\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0mX_encoder\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mencode\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mdf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0minput_column\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m     \u001b[0mmax_len\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmax\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mx_raw\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m     \u001b[0mx_raw\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0mpad_tensor\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlength\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m4395\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mx_raw\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m     \u001b[0my_raw\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mY_encoder\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtransform\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0moutput_column\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mD:\\Programming\\Anaconda\\lib\\site-packages\\torchnlp\\encoders\\text\\text_encoder.py\u001b[0m in \u001b[0;36mpad_tensor\u001b[1;34m(tensor, length, padding_index)\u001b[0m\n\u001b[0;32m     19\u001b[0m     \"\"\"\n\u001b[0;32m     20\u001b[0m     \u001b[0mn_padding\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlength\u001b[0m \u001b[1;33m-\u001b[0m \u001b[0mtensor\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 21\u001b[1;33m     \u001b[1;32massert\u001b[0m \u001b[0mn_padding\u001b[0m \u001b[1;33m>=\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     22\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mn_padding\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     23\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[0mtensor\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mAssertionError\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "x_input, y_input = tokenize_data(df, x_encoder, y_encoder)"
    ]
@@ -537,7 +543,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x_input[0].type()"
+    "X_train,X_valid, y_train, y_valid = train_test_split(x_input, y_input, test_size=0.2) "
    ]
   },
   {
@@ -546,7 +552,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_input[0].type()"
+    "class createDataset(Dataset):\n",
+    "    def __init__(self, X,Y):\n",
+    "        self.X = X\n",
+    "        self.y=Y\n",
+    "        \n",
+    "    def __len__(self):\n",
+    "        return len(self.y)\n",
+    "    \n",
+    "    def __getitem__(self, idx):\n",
+    "        return torch.from_numpy(self.X[idx][0]), torch.from_numpy(self.y[idx])"
    ]
   },
   {
@@ -554,14 +569,162 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "train_ds = createDataset(X_train,y_train)\n",
+    "valid_ds = createDataset(X_valid, y_valid)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "train_loader = DataLoader(train_ds, batch_size = 100)\n",
+    "valid_loader = DataLoader(valid_ds, batch_size=100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for (X_train, y_train) in train_loader:\n",
+    "    print('X_train:', X_train.size(), 'type:', X_train.type())\n",
+    "    print('y_train:', y_train.size(), 'type:', y_train.type())\n",
+    "    break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if torch.cuda.is_available():\n",
+    "    print('Using GPU!')\n",
+    "    device = torch.device('cuda')\n",
+    "else:\n",
+    "    print('Using CPU')\n",
+    "    device = torch.device('cpu')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class LSTM_Model(nn.Module):\n",
+    "    def __init__(self, vocab_size, embedding_dim, hidden_dim,output_size):\n",
+    "        super().__init__()\n",
+    "        \n",
+    "        self.embeddings = nn.Embedding(vocab_size, embedding_dim,padding_idx=0)\n",
+    "        self.lstm = nn.LSTM(embedding_dim,hidden_dim,batch_first=True)\n",
+    "        self.linear = nn.Linear(hidden_dim,output_size)\n",
+    "    \n",
+    "    def forward(self,x):\n",
+    "        x= self.embeddings(x)\n",
+    "        lstm_output, (ht,states) = self.lstm(x)\n",
+    "        output = F.sigmoid(self.linear(ht[-1]))\n",
+    "        return output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = LSTM_Model(encoder.vocab_size,20,20,y_input[0].shape[0])\n",
+    "optimizer = torch.optim.SGD(model.parameters(), lr=0.01,momentum=0.5)\n",
+    "criterion = nn.MSELoss()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train(epoch,log_interval=100):\n",
+    "    model.train()\n",
+    "    \n",
+    "    for batch_idx, (data, target) in enumerate(train_loader):\n",
+    "        \n",
+    "        data= data.to(device)\n",
+    "        target = target.to(device)\n",
+    "        target= target.float()\n",
+    "        data = data.long()\n",
+    "        optimizer.zero_grad()\n",
+    "        output = model(data)\n",
+    "        #print(output[0])\n",
+    "        #print(output.shape)\n",
+    "        loss = criterion(output, target)\n",
+    "        loss.backward()\n",
+    "        \n",
+    "        optimizer.step()\n",
+    "        \n",
+    "        \n",
+    "        if batch_idx % log_interval == 0:\n",
+    "            print('Train Epoch: {} [{}/{} ({:.0f}%)]\\tLoss: {:.6f}'.format(\n",
+    "                epoch, batch_idx * len(data), len(train_loader.dataset),\n",
+    "                100. * batch_idx / len(train_loader), loss.data.item()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def validate(loss_vector, accuracy_vector):\n",
+    "    model.eval()\n",
+    "    val_loss, correct = 0, 0\n",
+    "    for data, target in valid_loader:\n",
+    "        data = data.to(device)\n",
+    "        target = target.to(device)\n",
+    "        target= target.float()\n",
+    "        data = data.long()\n",
+    "        output = model(data)\n",
+    "        val_loss += criterion(output, target).data.item()\n",
+    "        pred = output.data.max(1)[1] # get the index of the max log-probability\n",
+    "        correct += pred.eq(target.data).long().cpu().sum()\n",
+    "\n",
+    "    val_loss /= len(validation_loader)\n",
+    "    loss_vector.append(val_loss)\n",
+    "\n",
+    "    accuracy = 100. * correct / len(validation_loader.dataset)\n",
+    "    accuracy_vector.append(accuracy)\n",
+    "    \n",
+    "    print('\\nValidation set: Average loss: {:.4f}, Accuracy: {}/{} ({:.0f}%)\\n'.format(\n",
+    "        val_loss, correct, len(validation_loader.dataset), accuracy))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "epochs = 1\n",
+    "\n",
+    "lossv, accv = [], []\n",
+    "for epoch in range(1, epochs + 1):\n",
+    "    train(epoch)\n",
+    "    #validate(lossv, accv)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -628,7 +791,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
