--- a/text_project_modified.ipynb
+++ b/text_project_modified.ipynb
@@ -745,27 +745,38 @@
    "source": [
     "def validate(loss_vector, accuracy_vector):\n",
     "    model.eval()\n",
+    "    accuracy_metric = []\n",
     "    val_loss, correct = 0, 0\n",
     "    for data, target in valid_loader:\n",
     "        data = data.to(device)\n",
     "        target = target.to(device)\n",
-    "        print(target[0])\n",
+    "        #print(target[0])\n",
     "        target= target.float()\n",
     "        data = data.long()\n",
     "        output = model(data)\n",
-    "        print(output.data[0])\n",
+    "        #print(output.data[0])\n",
     "        val_loss += criterion(output, target).data.item()\n",
-    "        pred = output.data.max(1)[1] # get the index of the max log-probability\n",
-    "        correct += pred.eq(target.data).cpu().sum()\n",
+    "        \n",
+    "        acc = torch.abs(output - target).view(-1)\n",
+    "        #print(acc)\n",
+    "        acc = (1. - acc.sum() / acc.size()[0]) * 100.\n",
+    "        #print(acc)\n",
+    "        accuracy_metric.append(acc)\n",
+    "        #break\n",
+    "        #pred = output.data.max(1)[1] # get the index of the max log-probability\n",
+    "        #correct += pred.eq(target.data).cpu().sum()\n",
     "\n",
-    "    val_loss /= len(valid_loader)\n",
-    "    loss_vector.append(val_loss)\n",
-    "\n",
-    "    accuracy = 100. * correct / len(valid_loader.dataset)\n",
+    "    #val_loss /= len(valid_loader)\n",
+    "    #loss_vector.append(val_loss)\n",
+    "    \n",
+    "            \n",
+    "        \n",
+    "        \n",
+    "    accuracy = np.sum(accuracy_metric) / len(valid_loader.dataset)\n",
+    "    \n",
     "    accuracy_vector.append(accuracy)\n",
     "    \n",
-    "    print('\\nValidation set: Average loss: {:.4f}, Accuracy: {}/{} ({:.0f}%)\\n'.format(\n",
-    "        val_loss, correct, len(valid_loader.dataset), accuracy))"
+    "    print('\\nAccuracy: {}/{} ({:.0f}%)\\n'.format(accuracy))"
    ]
   },
   {
