Made some changes to the encoding of the codes

--- a/Model/text_project_google_with test_colab_previous.ipynb
+++ b/Model/text_project_google_with test_colab_previous.ipynb
@@ -1079,7 +1079,7 @@
     "    \n",
     "    #Initialize multilabelbinarizer for encoding codes in one hot\n",
     "    multilabel_binarizer = MultiLabelBinarizer()\n",
-    "    multilabel_binarizer.fit(data[output_column])\n",
+    "    multilabel_binarizer.fit([CODEMAP_list])\n",
     "    \n",
     "    #Save encoders to pickle\n",
     "    with open(X_encoder_filename, 'wb') as handle:\n",
